Set active margins earlier

Avoid crash when calling iconPosition()

BUG:241458

svn path=/trunk/KDE/kdelibs/; revision=1140966